methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:4: error: '(' expected but identifier found.
while haveBaggle() || p==7 if (haveBaggle()) {return} else {droite();avance();gauche();}
      ^MethodsReturning:9: error: illegal start of simple expression
}
^